turtleart.circlesquare.CircleSquare.scala.error
Compilation error:
CircleSquare:7: error: not found: value rayon
  rayon(50)
  ^